# aeolus

./: .gitignore  CHANGELOG.md  HANDOFF-history-and-attention.md  README.md  REQUIREMENTS.md  conftest.py  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: ci.yml  claude-code-review.yml
brand/: README.md
custom_components/aeolus/: __init__.py  binary_sensor.py  config_flow.py  const.py  controller.py  diagnostics.py  ema.py  engine.py  entity.py  estimator.py  icons.json  logbook.py  manifest.json  models.py  number.py  quality_scale.yaml  runtime.py  safety.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/aeolus/translations/: en.json
docs/: SCAFFOLD.md
tests/: test_action_history.py  test_attention.py  test_availability.py  test_config_flow.py  test_control.py  test_controller_unit.py  test_cover.py  test_derived_sensors.py  test_diagnostics.py  test_dynamic_devices.py  test_ema.py  test_engine.py  test_entities.py  test_estimator.py  test_fan_speed.py  test_icons.py  test_induced.py  test_metrics_parse.py  test_options_flow.py  test_outdoor_aq.py  test_override_grace.py  test_parity.py  test_rearm.py  test_reliability.py  test_reload.py  test_repairs.py  test_safety.py  test_services.py  test_subentry_flow.py  test_tier_config_flow.py  test_tier_ladder.py
