[project]
name = "aeolus"
version = "0.4.0"
description = "Adaptive, multi-zone CO2 & ventilation manager for Home Assistant"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
